--- a/request.html
+++ b/request.html
@@ -76,101 +76,101 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-5">
+                <h4 style="color: #332D2D; font-weight: 300;">User Personal Information</h4>
               <div class="card">
-                <!-- <div class="card-header card-header-primary">
-                  <h4 class="card-title ">Simple Table</h4>
-                  <p class="card-category"> Here is a subtitle for this table</p>
-                </div> -->
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table">
-                      <thead class=" text-primary">
-                        <th>
-                          S. No
-                        </th>
-                        <th>
-                          User Name
-                        </th>
-                        <th>
-                          Phone Number
-                        </th>
-                        <th>
-                          Requested
-                        </th>
-                        <th>
-                          Action
-                        </th>
-                      </thead>
                       <tbody>
                         <tr>
-                          <td>
-                            1
+                          <td style="color: #332D2D; opacity: 0.7;">
+                            User Name
                           </td>
                           <td>
-                            Shubham Kumar
-                          </td>
-                          <td>
-                            +91 7808746590  
-                          </td>
-                          <td>
-                            Bank Form
-                          </td>
-                          <td class="text-primary">
-                            <a onclick="viewreq()" style="cursor: pointer;">View</a>
+                            Anu Gupta
                           </td>
                         </tr>
                         <tr>
-                          <td>
-                            2
-                          </td>
-                          <td>
-                            Pratham Goel
-                          </td>
-                          <td>
-                            +00 0021221111
-                          </td>
-                          <td>
-                            Aadhar Card
-                          </td>
-                          <td class="text-primary">
-                            <a onclick="viewreq()" style="cursor: pointer;">View</a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            3
-                          </td>
-                          <td>
-                            Saurav Sonu
-                          </td>
-                          <td>
-                            +91 8888822222
-                          </td>
-                          <td>
-                            PanCard
-                          </td>
-                          <td class="text-primary">
-                            <a onclick="viewreq()" style="cursor: pointer;">View</a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            4
-                          </td>
-                          <td>
-                            Shivam Shekhar
-                          </td>
-                          <td>
-                            +91 2233466778
-                          </td>
-                          <td>
-                            Aadhar Card
-                          </td>
-                          <td class="text-primary">
-                            <a onclick="viewreq()" style="cursor: pointer;">View</a>
-                          </td>
-                        </tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                              Father Name
+                            </td>
+                            <td>
+                                Rahul Gupta
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                              Mother Name
+                            </td>
+                            <td>
+                              Rani Gupta
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                              Mobile Number
+                            </td>
+                            <td>
+                              +91 0022334455
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Gender
+                            </td>
+                            <td>
+                                23/08/2001
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Marital Status
+                            </td>
+                            <td>
+                                Others
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Email
+                            </td>
+                            <td>
+                                anugupta@gmail.com
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Residential Status
+                            </td>
+                            <td>
+                                Permanent
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Occupation
+                            </td>
+                            <td>
+                                Student
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Country Code
+                            </td>
+                            <td>
+                                +91
+                            </td>
+                          </tr>
+                          <tr>
+                            <td style="color: #332D2D; opacity: 0.7;">
+                                Place of birth
+                            </td>
+                            <td>
+                                Ambala
+                            </td>
+                          </tr>
                       </tbody>
                     </table>
                   </div>
@@ -178,6 +178,29 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
 
+            <div class="col-md-7">
+                <h4 style="color: #332D2D; font-weight: 300;">Documents</h4>
+              <div class="card">
+                <div class="card-body">
+                  <h5 style="color: #332D2D; opacity: 0.7; font-size: 15px;">Aadhar Card</h5>
+                  <br>
+                  <img src="./assets/img/aadhar.png">
+                  
+                  <br>
+                  <br>
+
+                  <h5 style="color: #332D2D; opacity: 0.7; font-size: 15px;">Pan Card</h5>
+                  <br>
+                  <img src="./assets/img/pan.png">
+                  <br>
+                </div>
+              </div>
+            </div>
+
+      </div>
+
+      <div class="row">
+        <button  style="width: 100%;" class="btn btn-primary pull-right"  onclick="confirnacc()">Confirm Account Open</button>
       </div>
     </div>
   </div>
@@ -226,9 +249,10 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="../assets/demo/demo.js"></script>
   <script>
 
-    function viewreq(){
-      document.location = './request.html';
-    }
+      function confirnacc(){
+        alert("Successful !!!")
+        document.location = './pending.html';
+      }
 
     $(document).ready(function() {
       $().ready(function() {
