update for mentor connect

--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
         <div id="loginbtn" style="display: contents">
           <span>Forgot Password?</span>
           <button type="submit" onclick="login()">Login</button>
-          <span onclick="wantToSignup()">Dont have an Account?</span>
+          <!-- <span onclick="wantToSignup()">Dont have an Account?</span> -->
         </div>
-        <div id="signupbtn" style="display: none">
+        <!-- <div id="signupbtn" style="display: none">
           <!-- <span>Forgot Password?</span> -->
-          <button type="submit" onclick="signup()">Sign-Up</button>
+          <!-- <button type="submit" onclick="signup()">Sign-Up</button>
           <span onclick="wantToLogin()"> Have an Account?</span>
-        </div>
+        </div> --> -->
       </form>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
     <script src="./assets/js/fbconfig.js"></script>
     <script src="./assets/js/index-login.js"></script>
   </body>
