--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@ The above copyright notice and this permission notice shall be included in all c
 
 <body class="">
   <div class="wrapper ">
-    <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="purple" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
@@ -53,12 +53,12 @@ The above copyright notice and this permission notice shall be included in all c
               <p>Pending</p>
             </a>
           </li>
-          <li class="nav-item ">
+          <!-- <li class="nav-item ">
             <a class="nav-link" href="./notifications.html">
               <i class="material-icons">notifications</i>
               <p>Notifications</p>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -101,25 +101,35 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <label class="bmd-label-floating" for="select">Select Option</label>
-                        <select class="select-btn" name="selecttype" style="width: 100%;
-                        height: 39px;
-                        padding-left: 20px;
-                        border: 0px;
-                        border-bottom: 1px solid #e0e0e0;
-                        color:#1f2124c5;" required >
-                          <option selected ></option>
-                          <option value="bank_form">Bank Form</option>
-                          <option value="aadhar_card">Aadhar Card</option>
-                          <option value="pan_card">Pan Card</option>
-                        </select>
+                        <div class="form-group">
+
+                          <label class="bmd-label-floating" for="select">Select Option</label>
+                          <input type="text" class="select-btn form-control"  name="selecttype"  list="typeform" >
+                          <datalist id="typeform">
+                            <option value="Bank Form">
+                            <option value="Aadhar Card">
+                            <option value="Pan Card">
+                          </datalist>
+                          <!-- <input type="text" class="form-control"> -->
+                          <!-- <select class="select-btn form-control"  name="selecttype" style="width: 100%;
+                          height: 39px;
+                          padding-left: 20px;
+                          border: 0px;
+                          border-bottom: 1px solid #e0e0e0;
+                          color:#1f2124c5;" required >
+                            <option selected ></option>
+                            <option value="bank_form">Bank Form</option>
+                            <option value="aadhar_card">Aadhar Card</option>
+                            <option value="pan_card">Pan Card</option>
+                          </select> -->
+                        </div>
                       </div>
                     </div>
                     <br>
-                    <button type="submit" style="width: 100%;" class="btn btn-primary pull-right" id="generate-press">Generate QR</button>
+                    <button type="submit" style="width: 100%;" class="btn btn-primary pull-right" id="generate-press" onclick="gameChange2()">Generate QR</button>
                     <div style="text-align: center;font: normal normal normal 15px/22px Comfortaa;color: #48BF84;display: none;" id="generate-pressed">
                       <p>QR Code generated <span><img src="./assets/img/round.png" style="max-height: 18px;"></span></p>
-                      <button style="width: 100%;" class="btn btn-primary pull-right" id="generate-another">Generate Another QR</button>
+                      <button style="width: 100%;" class="btn btn-primary pull-right" id="generate-another" onclick="gameChange2()">Generate Another QR</button>
                     </div>
                     <div class="clearfix"></div>
                   </form>
@@ -151,50 +161,51 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
   </div>
   <!--   Core JS Files   -->
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
-  <script src="../assets/js/core/jquery.min.js"></script>
-  <script src="../assets/js/core/popper.min.js"></script>
-  <script src="../assets/js/core/bootstrap-material-design.min.js"></script>
-  <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <script src="./assets/js/core/jquery.min.js"></script>
+  <script src="./assets/js/core/popper.min.js"></script>
+  <script src="./assets/js/core/bootstrap-material-design.min.js"></script>
+  <script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
   <!-- Plugin for the momentJs  -->
-  <script src="../assets/js/plugins/moment.min.js"></script>
+  <script src="./assets/js/plugins/moment.min.js"></script>
   <!--  Plugin for Sweet Alert -->
-  <script src="../assets/js/plugins/sweetalert2.js"></script>
+  <script src="./assets/js/plugins/sweetalert2.js"></script>
   <!-- Forms Validations Plugin -->
-  <script src="../assets/js/plugins/jquery.validate.min.js"></script>
+  <script src="./assets/js/plugins/jquery.validate.min.js"></script>
   <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
-  <script src="../assets/js/plugins/jquery.bootstrap-wizard.js"></script>
+  <script src="./assets/js/plugins/jquery.bootstrap-wizard.js"></script>
   <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="../assets/js/plugins/bootstrap-selectpicker.js"></script>
+  <script src="./assets/js/plugins/bootstrap-selectpicker.js"></script>
   <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-  <script src="../assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
+  <script src="./assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
   <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
-  <script src="../assets/js/plugins/jquery.dataTables.min.js"></script>
+  <script src="./assets/js/plugins/jquery.dataTables.min.js"></script>
   <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-  <script src="../assets/js/plugins/bootstrap-tagsinput.js"></script>
+  <script src="./assets/js/plugins/bootstrap-tagsinput.js"></script>
   <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-  <script src="../assets/js/plugins/jasny-bootstrap.min.js"></script>
+  <script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>
   <!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
-  <script src="../assets/js/plugins/fullcalendar.min.js"></script>
+  <script src="./assets/js/plugins/fullcalendar.min.js"></script>
   <!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
-  <script src="../assets/js/plugins/jquery-jvectormap.js"></script>
+  <script src="./assets/js/plugins/jquery-jvectormap.js"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="../assets/js/plugins/nouislider.min.js"></script>
+  <script src="./assets/js/plugins/nouislider.min.js"></script>
   <!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
   <!-- Library for adding dinamically elements -->
-  <script src="../assets/js/plugins/arrive.min.js"></script>
+  <script src="./assets/js/plugins/arrive.min.js"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <!-- Chartist JS -->
-  <script src="../assets/js/plugins/chartist.min.js"></script>
+  <script src="./assets/js/plugins/chartist.min.js"></script>
   <!--  Notifications Plugin    -->
-  <script src="../assets/js/plugins/bootstrap-notify.js"></script>
+  <script src="./assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="../assets/js/material-dashboard.js?v=2.1.2" type="text/javascript"></script>
+  <script src="./assets/js/material-dashboard.js?v=2.1.2" type="text/javascript"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <script src="../assets/demo/demo.js"></script>
-  <script>
+  <script src="./assets/demo/demo.js"></script>
+    <script>
 
 ////for generating qr
 
@@ -442,6 +453,10 @@ The above copyright notice and this permission notice shall be included in all c
       });
     });
   </script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="./assets/js/fbconfig.js"></script>
+  <script src="./assets/js/pending-fb.js"></script>
 </body>
 
 </html>
