--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
           <button type="submit" onclick="login()">Login</button>
           <!-- <span onclick="wantToSignup()">Dont have an Account?</span> -->
         </div>
-        <!-- <div id="signupbtn" style="display: none">
+        <div id="signupbtn" style="display: none">
           <!-- <span>Forgot Password?</span> -->
-          <!-- <button type="submit" onclick="signup()">Sign-Up</button>
+          <button type="submit" onclick="signup()">Sign-Up</button>
           <span onclick="wantToLogin()"> Have an Account?</span>
-        </div> --> -->
+        </div> 
       </form>
     </div>
 
