--- a/request.html
+++ b/request.html
@@ -454,7 +454,7 @@ The above copyright notice and this permission notice shall be included in all c
           }
         // }
         if (myArray['Pending'] == "False") {
-          // document.getElementById('confirm-btn').setAttribute('disabled', 'true');
+          document.getElementById('confirm-btn').setAttribute('disabled', 'true');
         }
 
         // for (var i=1; i <= myArray.length; i++) {
