--- a/request.html
+++ b/request.html
@@ -14,8 +14,7 @@ The above copyright notice and this permission notice shall be included in all c
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="./assets/img/favicon.png"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Iden TT
@@ -32,19 +31,29 @@ The above copyright notice and this permission notice shall be included in all c
 
 <body class="">
   <div class="wrapper ">
-    <div class="sidebar" data-color="purple" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="purple" data-background-color="white">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
         Tip 2: you can also add an image using data-image tag
     -->
-      <div class="logo"><a href="#" class="simple-text logo-normal">
-          Iden TT
-        </a>
-        <a href="./dashboard.html" class="simple-text logo-normal" id="logo-type" style=" font-family: fantasy;
-        background: gainsboro;" >
+    <div class="logo" style="display: flex; flex-direction: column; align-items: center;">
+      <a href="./dashboard.html" class="simple-text logo-normal">
+        <img src="./assets/img/IdenTT_Logo.png" style="max-height: 70px;"> 
+      </a>
+      <br>
+      <a href="./dashboard.html" >
+          <img src="" id="logo-type" style="max-height: 82px;">
+      </a>
+      <a href="./dashboard.html" class="simple-text logo-normal" id="logo-type-text" style=" font-family: fantasy; " >
           
-        </a></div>
+        </a>
+      <!-- <a href="./dashboard.html" class="simple-text logo-normal identity-logo"style=" font-family: fantasy;
+      background: gainsboro;" >
+        Identity 
+      </a> -->
+      
+    </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li class="nav-item ">
@@ -74,6 +83,9 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="container-fluid">
           <div class="navbar-wrapper">
             <a class="navbar-brand" href="javascript:;" onclick="location('/pending.html')">Pending Requests</a>
+          </div>
+          <div class="navbar-wrapper">
+            <button  class="btn btn-primary"><img src="./assets/icons/logout.png"></button> 
           </div>
       </nav>
       <!-- End Navbar -->
@@ -495,13 +507,15 @@ The above copyright notice and this permission notice shall be included in all c
   </script>
    <script>
     function knowyourAdmin(params) {
-      if (params) {
-        document.getElementById("logo-type").innerHTML = "Bank";
-      }else{
-
-        document.getElementById("logo-type").innerHTML = "Identity";
+        if (params) {
+          document.getElementById("logo-type").src = "./assets/icons/Bank.png";
+          document.getElementById("logo-type-text").innerHTML = "Bank";
+        }else{
+  
+          document.getElementById("logo-type").src = "./assets/icons/Document.png";
+          document.getElementById("logo-type-text").innerHTML = "Identity";
+        }
       }
-    }
   </script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
   <script src="./assets/js/fbconfig.js"></script>
