--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
       <h1>Welcome to IdenTT Admin Panel</h1>
       <form class="form-1" id="form-1">
         <label for="email">Admin Email ID</label>
-        <input type="email" name="email" id="email" required />
+        <input type="email" name="email" id="email" required placeholder="admin@bank.com/ admin@document.com"/>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required />
+        <input type="password" name="password" id="password" required placeholder="Password: 123456789"/>
         <div id="loginbtn" style="display: contents">
           <span>Forgot Password?</span>
           <button type="submit" onclick="login()">Login</button>
