--- a/pending.html
+++ b/pending.html
@@ -69,13 +69,13 @@ The above copyright notice and this permission notice shall be included in all c
         <ul class="nav">
           <li class="nav-item ">
             <a class="nav-link" href="./dashboard.html">
-              <i class="material-icons">person</i>
+              <i class="material-icons">qr_code</i>
               <p>Generate QR</p>
             </a>
           </li>
           <li class="nav-item  active">
             <a class="nav-link" href="./pending.html">
-              <i class="material-icons">content_paste</i>
+              <i class="material-icons">person</i>
               <p>Pending</p>
             </a>
           </li>
