--- a/dashboard.html
+++ b/dashboard.html
@@ -68,13 +68,13 @@ The above copyright notice and this permission notice shall be included in all c
         <ul class="nav">
           <li class="nav-item active ">
             <a class="nav-link" href="./dashboard.html">
-              <i class="material-icons">person</i>
+              <i class="material-icons">qr_code</i>
               <p>Generate QR</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pending.html">
-              <i class="material-icons">content_paste</i>
+              <i class="material-icons">person</i>
               <p>Pending</p>
             </a>
           </li>
@@ -135,22 +135,11 @@ The above copyright notice and this permission notice shall be included in all c
                           <label class="bmd-label-floating" for="select">Select Option</label>
                           <input type="text" class="select-btn form-control"  name="selecttype"  list="typeform" >
                           <datalist id="typeform">
-                            <option value="Bank Form">
+                            <!-- <option value="Bank Form" id="bankform"> -->
                             <option value="Aadhar Card">
                             <option value="Pan Card">
                           </datalist>
-                          <!-- <input type="text" class="form-control"> -->
-                          <!-- <select class="select-btn form-control"  name="selecttype" style="width: 100%;
-                          height: 39px;
-                          padding-left: 20px;
-                          border: 0px;
-                          border-bottom: 1px solid #e0e0e0;
-                          color:#1f2124c5;" required >
-                            <option selected ></option>
-                            <option value="bank_form">Bank Form</option>
-                            <option value="aadhar_card">Aadhar Card</option>
-                            <option value="pan_card">Pan Card</option>
-                          </select> -->
+                          
                         </div>
                       </div>
                     </div>
@@ -487,10 +476,16 @@ The above copyright notice and this permission notice shall be included in all c
         if (params) {
           document.getElementById("logo-type").src = "./assets/icons/Bank.png";
           document.getElementById("logo-type-text").innerHTML = "Bank";
+          bankform = document.createElement("option");
+          bankform.setAttribute("value","Bank Form");
+
+          document.getElementById("typeform").appendChild(bankform);
+          
         }else{
   
           document.getElementById("logo-type").src = "./assets/icons/Document.png";
           document.getElementById("logo-type-text").innerHTML = "Document";
+          document.getElementById("bankform").style.visibility = "invisible";
         }
       }
   </script>
