--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <h1>Welcome to IdenTT Admin Panel</h1>
       <form class="form-1" id="form-1">
         <label for="email">Admin Email ID</label>
-        <input type="email" name="email" id="email" required placeholder="admin@bank.com/ admin@document.com"/>
+        <input type="email" name="email" id="email" required placeholder="Enter admin@bank.com or admin@document.com"/>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required placeholder="Password: 123456789"/>
         <div id="loginbtn" style="display: contents">
