--- a/dashboard.html
+++ b/dashboard.html
@@ -52,12 +52,13 @@ The above copyright notice and this permission notice shall be included in all c
         <img src="./assets/img/IdenTT_Logo.png" style="max-height: 70px;"> 
       </a>
       <br>
-      <a href="./dashboard.html" >
+      <a >
           <img src="" id="logo-type" style="max-height: 82px;">
       </a>
-      <a href="./dashboard.html" class="simple-text logo-normal" id="logo-type-text" style=" font-family: fantasy; " >
+      <a class="simple-text logo-normal" id="logo-type-text" style="font: normal normal normal 15px/22px Comfortaa " >
           
         </a>
+        <br>
       <!-- <a href="./dashboard.html" class="simple-text logo-normal identity-logo"style=" font-family: fantasy;
       background: gainsboro;" >
         Identity 
@@ -146,7 +147,7 @@ The above copyright notice and this permission notice shall be included in all c
                     <br>
                     <button type="submit" style="width: 100%;" class="btn btn-primary pull-right" id="generate-press" onclick="gameChange2()">Generate QR</button>
                     <div style="text-align: center;font: normal normal normal 15px/22px Comfortaa;color: #48BF84;display: none;" id="generate-pressed">
-                      <p>QR Code generated <span><img src="./assets/img/round.png" style="max-height: 18px;"></span></p>
+                      <p>QR Code generated <span><img src="./assets/img/round.svg" style="max-height: 18px;"></span></p>
                       <button style="width: 100%;" class="btn btn-primary pull-right" id="generate-another" onclick="gameChange2()">Generate Another QR</button>
                     </div>
                     <div class="clearfix"></div>
