--- a/pending.html
+++ b/pending.html
@@ -53,12 +53,13 @@ The above copyright notice and this permission notice shall be included in all c
         <img src="./assets/img/IdenTT_Logo.png" style="max-height: 70px;"> 
       </a>
       <br>
-      <a href="./dashboard.html" >
+      <a >
           <img src="" id="logo-type" style="max-height: 82px;">
       </a>
-      <a href="./dashboard.html" class="simple-text logo-normal" id="logo-type-text" style=" font-family: fantasy; " >
+      <a class="simple-text logo-normal" id="logo-type-text" style="font: normal normal normal 15px/22px Comfortaa ;" >
           
         </a>
+        <br>
       <!-- <a href="./dashboard.html" class="simple-text logo-normal identity-logo"style=" font-family: fantasy;
       background: gainsboro;" >
         Identity 
