--- a/request.html
+++ b/request.html
@@ -53,12 +53,13 @@ The above copyright notice and this permission notice shall be included in all c
         <img src="./assets/img/IdenTT_Logo.png" style="max-height: 70px;"> 
       </a>
       <br>
-      <a href="./dashboard.html" >
+      <a >
           <img src="" id="logo-type" style="max-height: 82px;">
       </a>
-      <a href="./dashboard.html" class="simple-text logo-normal" id="logo-type-text" style=" font-family: fantasy; " >
+      <a class="simple-text logo-normal" id="logo-type-text" style="font: normal normal normal 15px/22px Comfortaa " >
           
         </a>
+        <br>
       <!-- <a href="./dashboard.html" class="simple-text logo-normal identity-logo"style=" font-family: fantasy;
       background: gainsboro;" >
         Identity 
@@ -233,7 +234,7 @@ The above copyright notice and this permission notice shall be included in all c
         <button  style="width: 100%;" class="btn btn-primary pull-right"  onclick="confirnacc()" id="confirm-btn">Confirm Account Open</button>
       </div>
       <div class="row">
-        <a href="./pending.html" style="color: white; width: 100%;"><button  style="width: 100%;" class="btn btn-primary pull-right" style="background: #032965b8;"  >
+        <a href="./pending.html" style="color: white; width: 100%;"><button  style="width: 100%; border: 0px;color: #032965;" >
           Back
         </button>
         </a>
